log
Thu 11 May 2023 11:11:46 PM UTC: 
 heap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  1|3
total_score: 10/70
152ee4f
Fri 12 May 2023 07:24:44 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
dbc8912
Fri 12 May 2023 08:14:01 PM UTC: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:28:5: error: expected expression before ‘int’
   28 |     int newCapac = ((pq->capac) * 2) + 1;
      |     ^~~
heap.c:27:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   27 |   if(pq->size == pq->capac)
      |   ^~
heap.c:29:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   29 |     pq->heapArray = realloc(pq->heapArray, ((((pq->capac)*2) + 1) * sizeof(heapElem)));
      |     ^~
cc1: all warnings being treated as errors
Compilation failed
4afc435
Fri 12 May 2023 08:29:26 PM UTC: 
 heap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  2|2
total_score: 20/70
e2525d7
Fri 12 May 2023 09:48:07 PM UTC: 
 heap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
05fe46a
